# dschaub95.github.io

./: README.md  index.html  pyproject.toml  styles.css
.github/workflows/: deploy.yml
assets/css/: custom.css
config/_default/: hugo.yaml  menus.yaml  params.yaml
content/: _index.md
content/authors/admin/: _index.md
content/publication/abdollahi-comprehensive-comparison-deep-2024/: cite.bib  index.md
content/publication/engesser-immune-profilingbased-targeting-2024/: cite.bib  index.md
content/publication/schaub-pc-abased-spatial-domain-2025/: cite.bib  index.md
content/publication/sultana-spatiotemporal-interaction-immune-2024/: cite.bib  index.md
content/publication/sultana-spatiotemporal-interaction-immune-2024-a/: cite.bib  index.md
content/publication/wang-benchmarking-omicsbased-prediction-2023/: cite.bib  index.md
content/publication/wang-type-interferon-drives-2025/: cite.bib  index.md
content/publication/yousefi-scale-unsupervised-multi-scale-2025/: cite.bib  index.md
data/: publications.bib
scripts/: bibtex_to_html.py  serve.py
